<resources>
    <string name="app_name">TakeOut</string>
    <string name="home">外卖</string>
    <string name="sharing">发现</string>
    <string name="my">我的</string>
    <string name="order">订单</string>
    <string name="action_back">返回</string>
    <string name="publish">发布</string>
    <string name="add_title">添加标题</string>
    <string name="sharing_content_hint">分享此刻</string>
    <string name="add_photo">添加照片</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_face_small">用户小头像</string>

    <string name="txt_listview1"><u>skip to Share>>></u></string>
    <string name="about">这是一个关于吃货宝智能点餐系统的介绍。</string>
    <string name="about_update"><u>检查版本更新</u></string>

    <string name="use_camera">使用相机</string>
    <string name="use_pick">选择图片</string>
    <string name="sharing_img">sharing img</string>
    <string name="sharing_comment">评论</string>

    <string name="CleanUp">清空</string>
    <string name="BottomSheet">购物车</string>
    <string name="payoff">支付</string>
    <string name="money">￥Money</string>
    <string name="StoreName">店名</string>
    <string name="Buy">TODO</string>
    <string name="todo">TODO</string>
    <string name="Description">描述</string>
    <string name="Add">+</string>
    <string name="Price">价格</string>
    <string name="FoodName">食物名称</string>
    <string name="Cut">-</string>
    <string name="Zero">0</string>
    <string name="Myorder">订单详情</string>
    <string name="SubmitOrder">提交订单</string>
    <string name="address_choose">选择收货地址</string>
    <string name="title">外卖配送</string>
    <string name="purchase">用支付宝支付</string>
    <string name="subtotal">小计:</string>
    <string name="remarks">备注</string>
    <string name="AddRemark">添加备注</string>
    <string name="finish">完成</string>
    <string name="address">地址</string>
    <string name="FoodNum">*1</string>
    <string name="hint_username">手机号</string>
    <string name="hint_password">密码</string>
    <string name="button_cancel">注册</string>
    <string name="button_confirm">登录</string>
    <string name="checkbox_re">记住密码</string>
    <string name="button_register">注册</string>
    <string name="hint_surepwd">确认密码</string>

    <string name="require_login_msg">请到\"我的\"界面登录!</string>
    <string name="require_content_msg">请输入内容！</string>
    <string name="retry">重试</string>

    <string name="total"><u>全部</u></string>
    <string name="readyPay"><u>待付款</u></string>
    <string name="readyfood"><u>待点餐</u></string>
    <string name="readytalk"><u>待评价</u></string>
    <string name="other"><u>退款/售后</u></string>
</resources>