<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientcolor"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".component.EnrollActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_register"
        android:layout_alignTop="@+id/btn_register"
        android:layout_alignEnd="@+id/btn_register"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btn_back"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/back" />

    <ImageView
        android:id="@+id/iv_head"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/btn_back"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        android:src="@drawable/sample_boy" />


    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_head"
        android:layout_marginTop="10dp"
        android:autofillHints="no"
        android:hint="@string/hint_username"
        android:inputType="phone"
        android:maxLength="11" />

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_username"
        android:layout_marginTop="10dp"
        android:autofillHints="no"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/et_surepwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_pwd"
        android:layout_marginTop="10dp"
        android:autofillHints="no"
        android:hint="@string/hint_surepwd"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_surepwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/button_register"
        android:textSize="18sp"
        android:textStyle="bold" />


</RelativeLayout>