<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/food_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/recyclerfood_item_image"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/todo"
                android:gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/sample_food" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/recyclerfood_tx_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/FoodName"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/recyclerfood_tx_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/Price"
                    android:textSize="15sp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_cut"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/btn_cut"
                        android:text="@string/Cut"
                        android:textColor="@color/colorLightgray"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tx_num"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/Zero"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/btn_add"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/btn_add"
                        android:text="@string/Add"
                        android:textSize="18sp" />

                </LinearLayout>


            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="10dp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>