<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/backto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightgreen"
        android:drawableStart="@drawable/back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/store_txname"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:text="@string/StoreName"
            android:textSize="20sp"
            android:textStyle="bold" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_food"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="5"
                android:contentDescription="@string/Buy"
                android:src="@drawable/bag" />

            <Button
                android:id="@+id/btn_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="2"
                android:background="@drawable/btn_leftradius"
                android:gravity="center"
                android:text="@string/money"
                android:textColor="@color/cardview_light_background"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_payoff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@drawable/btn_rightradius"
                android:gravity="center"
                android:text="@string/payoff"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>