<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".component.SharingPublishActivity">

    <Button
        android:id="@+id/btn_back"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_back"
        app:icon="@drawable/ic_action_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_publish"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publish"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="@dimen/margin_large"
        android:paddingEnd="@dimen/margin_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back">

        <androidx.cardview.widget.CardView
            android:id="@+id/img_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_media"
            app:cardCornerRadius="@dimen/margin_small"
            app:cardElevation="@dimen/margin_small">

            <ImageView
                android:id="@+id/img_publish"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:contentDescription="@string/add_photo"
                android:scaleType="centerCrop"
                android:src="@drawable/add_photo" />
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_title_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_container"
            app:counterEnabled="true"
            app:counterMaxLength="22">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_title"
                android:maxLength="@integer/title_length"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_title_container"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/text_length">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_title_container"
                android:ems="10"
                android:hint="@string/sharing_content_hint"
                android:maxLength="@integer/text_length"
                android:maxLines="4" />
        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
